# jeanjacket

./: README.md
divergent_cell/: cell.py  main.py  mesh.py  rewind.py  transport.py
granby/: env.py  main.py
granby/arch/: arch.py  bag.py
granby/envs/: cube_volume.py
jean/: env.py  iter1.py  jacket.py  main.py  organism.py
jean/generation/: 0-org  1-org  10-org  100-org  101-org  102-org  103-org  104-org  105-org  106-org  107-org  108-org  109-org  11-org  110-org  111-org  112-org  113-org  114-org  115-org  116-org  117-org  118-org  119-org  12-org  120-org  (+475 more)
manifold/: .gitignore  Cargo.toml  RECS.md  TODO.md  loss.html
manifold/.models/: approx_eq.manifold.json
manifold/examples/: about.rs  approx.rs  approx_eq.rs  backp.rs  mnist.rs  one_zero.rs  playground.rs  xor.rs  xor2.rs  zero_two.rs
manifold/src/: lib.rs  main.rs  util.rs
manifold/src/arch/: activation.rs  constant_fold.rs  manifold.rs  mod.rs  neuron.rs  signal.rs
manifold/src/arch/f/: activation.rs  loss.rs  mod.rs  shape.rs
manifold/src/arch/optimizers/: dynamic.rs  fixed_reweave.rs  love_uno.rs  mod.rs  optimizer.rs  turnstile.rs
manifold/src/arch/substrates/: mod.rs  traits.rs
manifold/src/arch/substrates/binary/: README.md  manifold.rs  mod.rs  neuron.rs  signal.rs
manifold/src/arch/substrates/blame_graph/: README.md  blame.rs  glaze.md  manifold.rs  mod.rs  neuron.rs  signal.rs  trainer.rs
manifold/src/arch/substrates/fully_connected/: README.md  manifold.rs  mod.rs  neuron.rs  signal.rs  trainer.rs
radial_dichotomy/: README.md  dichotomy.py  layer.py  main.py  sym.py
(+2 files in other folders)
