[package]
name = "manifold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mnist = "0.6.0"
ndarray = "0.15.6"
rand = "0.8.5"
serde = { version = "1.0.197", features = [ "derive"] }
serde_json = "1.0.114"
uuid = { version = "1.8.0", features = ["v4"] }
